kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: stackgres
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 8080
    targetPort: 5601
#    nodePort: 30000
  selector:
    k8s-app: kibana-logging
  type: ClusterIP
