kibana/kibana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: stackgres
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: whoami2-tls-kibana
      hosts:
         - kibana.taskgrids.com
  rules:
    - host: kibana.taskgrids.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kibana-logging
                port:
                  number: 8080
